# haskell-opentype

./: .gitignore  LICENSE  README.md  TODO  opentype.cabal  truetype.cabal
Data/: Truetype.hs
Data/Truetype/: Cmap.hs  Head.hs  Types.hs
Opentype/: Fileformat.hs
Opentype/Fileformat/: Cmap.hs  FontInfo.hs  Glyph.hs  Head.hs  Hhea.hs  Kern.hs  Maxp.hs  Name.hs  OS2.hs  Post.hs  Types.hs  Unicode.hs
Opentype/Fileformat/Unicode/: PostNames.hs
Truetype/: Fileformat.hs
Truetype/Fileformat/: Cmap.hs  Glyph.hs  Head.hs  Hhea.hs  Maxp.hs  Name.hs  OS2.hs  Post.hs  Types.hs
