Name:		truetype
Version: 	0.0.1
Synopsis:	Truetype loading and writing
Category: 	Typography
Copyright: 	Kristof Bastiaensen (2014)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/truetype/issues
Build-type:	Simple
Cabal-version:	>=1.8
Description:	This library supports loading and writing of truetype files.
 
source-repository head
  type:		git
  location:	https://github.com/kuribas/truetype

Library
  Ghc-options: -Wall
  Build-depends:
    base >= 3 && < 5,
    binary >= 0.8.1.0,
    bytestring > 0.10.0,
    containers >= 0.5.3,
    ghc >= 7.10.0,
    time > 1.4.0,
    vector >= 0.10,
    pretty-hex >= 1.0
  Exposed-Modules:
    Truetype.Fileformat    

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
    